k8s/components/redis-local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: zglosto
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
