k8s/components/redis-local/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis
  namespace: zglosto
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values: [authorization, backend]
      ports:
        - { protocol: TCP, port: 6379 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-applications-to-redis
  namespace: zglosto
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values: [authorization, backend]
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - { protocol: TCP, port: 6379 }
